NTI-Final-Project-Backend/K8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: final-project
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
