NTI-Final-Project-Backend/K8s/redis-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-backend-only
  namespace: final-project
spec:
  podSelector:
    matchLabels:
      app: redis
      tier: cache
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
              tier: backend
      ports:
        - protocol: TCP
          port: 6379
